--- a/lab-3/style-final.css
+++ b/lab-3/style-final.css
@@ -52,7 +52,8 @@ p {
 footer {
   position: fixed;
   bottom: 0;
-  background-color: rgba(247, 193, 162, 0.7);
+  background-color: rgba(247, 193, 162,1);
+  opacity: .4;
   width: 100%;
   display: flex;
   /* flex-direction: column; */
